--- a/email/email_party.html
+++ b/email/email_party.html
@@ -1,9 +1,12 @@
+
 <!DOCTYPE html>
 <html lang="fr">
-<body>
-
-<strong>Let's party</strong>
-
-
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>email party</title>
+    </head>
+    <body>
+        
+    </body>
 </html>
